# vader-sentiment-cpython

./: .gitignore  CMakeLists.txt  README.md  binding.cc  binding.gyp  build.sh  build_boost.sh  build_python.sh  deps.sh  index.js  install_vader.sh  lol.py  main.cpp  node-gyp-build.sh  original.py  package-lock.json  package.json  pyinstaller.sh  start.sh  test-fork.js  test-worker.js  test.js  worker-fork.js  worker.js
prebuilds/linux-x64/: node.napi.node  vader-sentiment-cpython.node
